--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,19 @@
 /*root*/
 @import url(../blocks/root/root.css);
 
+/*header*/
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__list/header__list.css);
+@import url(../blocks/header/__list-item/header__list-item.css);
+@import url(../blocks/header/__complain/header__complain.css);
+
+/*Intro*/
+@import url(../blocks/intro/__image/intro__image.css);
+@import url(../blocks/intro/__subtitle/intro__subtitle.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__container/intro__container.css);
+
 /*places*/
 @import url(../blocks/places/places.css);
 
