--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,9 +1,21 @@
 .place__text {
-
+  width: 100%;
+  max-width: 381px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .place__text {
-    padding: 67px 0 90px;
+    max-width: 500px;
   }
 }
+
+@media screen and (max-width: 425px) {
+  .place__text {
+    gap: 20px;
+  }
+}
+
