--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,3 +1,20 @@
 .place__title {
-
+  margin: 0 0 20px;
+  padding: 0;
+  font-size: 34px;
+  font-weight: 700;
 }
+
+@media screen and (max-width: 1024px) {
+  .place__title {
+    font-size: 28px;
+  }
+}
+
+
+@media screen and (max-width: 425px) {
+  .place__title {
+    font-size: 26px;
+  }
+}
+
