--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,8 +1,19 @@
 .place {
-
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: row;
 }
 
-@media screen and (min-width: 768px) {
+.place:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+@media screen and (max-width: 768px) {
   .place {
+    flex-direction: column;
+  }
+
+  .place:nth-child(even) {
+    flex-direction: column;
   }
 }
