--- a/blocks/header/__list/header__list.css
+++ b/blocks/header/__list/header__list.css
@@ -1,6 +1,7 @@
 .header__list {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
   margin: 0;
   padding: 0;
   list-style: none;
