--- a/blocks/intro/__container/intro__container.css
+++ b/blocks/intro/__container/intro__container.css
@@ -2,5 +2,19 @@
   margin: 0;
   padding: 0;
   max-width: 350px;
-  height: 350px;
+  max-height: 350px;
+  overflow: hidden;
+}
+
+@media screen and (max-width:1024px) {
+  .intro__container {
+    max-width: 300px;
+    max-height: 300px;
+  }
+}
+
+@media screen and (max-width:820px) {
+  .intro__container {
+    max-width: 700px;
+  }
 }
