--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,4 +5,27 @@
   font-weight: 700;
   line-height: 40px;
   max-width: 600px;
+  margin-right: 10px;
+}
+
+
+@media screen and (max-width: 1124px) {
+  .intro__title {
+    max-width: 450px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 820px) {
+  .intro__title {
+    max-width: 700px;
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .intro__title {
+    max-width: 450px;
+    font-size: 26px;
+  }
 }
