--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -9,3 +9,19 @@
   padding-left: 70px;
   padding-right: 140px;
 }
+
+
+@media screen and (max-width: 820px) {
+  .intro {
+    flex-direction: column;
+    padding-right: 70px;
+  }
+}
+
+
+@media screen and (max-width: 620px) {
+  .intro {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
