--- a/blocks/header/__list-item/header__list-item.css
+++ b/blocks/header/__list-item/header__list-item.css
@@ -7,8 +7,8 @@
   font-size: 12px;
 }
 
-.header__list-item:last-of-type {
-  justify-self: flex-end;
+.header__list-item:last-child {
+  margin-left: auto;
 }
 
 .header__list-item:hover {
