--- a/pages/index.css
+++ b/pages/index.css
@@ -4,8 +4,14 @@
 /*fonts*/
 @import url(../vendor/fonts/fonts.css);
 
+/*pulse*/
+@import url(../blocks/pulse/pulse.css);
+
 /*root*/
 @import url(../blocks/root/root.css);
+
+/*content*/
+@import url(../blocks/content/content.css);
 
 /*places*/
 @import url(../blocks/places/places.css);
@@ -20,3 +26,24 @@
 @import url(../blocks/place/__text/place__text.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__paragraph/place__paragraph.css);
+
+/*people*/
+@import url(../blocks/people/people.css);
+@import url(../blocks/people/__title/people__title.css);
+@import url(../blocks/people/__subtitle/people__subtitle.css);
+@import url(../blocks/people/__list/people__list.css);
+@import url(../blocks/people/__list-item/people__list-item.css);
+@import url(../blocks/people/__name/people__name.css);
+@import url(../blocks/people/__quote/people__quote.css);
+
+/*placeholder*/
+@import url(../blocks/placeholder/placeholder.css);
+
+/*footer*/
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__grid/footer__grid.css);
+@import url(../blocks/footer/__logo/footer__logo.css);
+@import url(../blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/__subtitle/footer__subtitle.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+
