--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,13 +6,13 @@
   padding-top: 48px;
 }
 
-/*
-@media screen and (max-width: 660px) {
+@media screen and (max-width: 1024px) {
   .header {
-    flex-direction: column;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 }
-*/
+
 
 @media screen and (max-width: 620px) {
   .header {
